@@ -20,6 +20,7 @@ Change Log:
          devices and sample rates
      16) Added mt63 500/1000/2000 modes
      17) Added psk acquisition level control
+     18) Added script to create .app bundles on OS X
 
 2.09  1) Modified src/Makefile.am for FreeBSD name space clash
       2) Added psk multi-channel viewer with regex search capability
